# Python-PDF-Bank-Statement-Parser

./: .gitignore  README.md  pyproject.toml  requirements.txt
finance_parser/: canara_parser.py  main.py
finance_parser/utils/: privacy.py
src/finance_parser/: gpay_parser.py  main.py
